cleaning up default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,7 @@ http://github.com/mojombo/jekyll would be appreciated, but is not required.
 
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
-    <a class="extra" href="/">home</a>
+    <a href="/Granite-Mon-Website">The Long Island / Granite Mon Challenge</a>
   </div>
   
   {{ content }}
@@ -37,20 +36,23 @@ http://github.com/mojombo/jekyll would be appreciated, but is not required.
   <div class="footer">
     <div class="contact">
       <p>
-        Not Tom Preston-Werner<br />
-        Not a Cofounder of <a href="http://github.com/">GitHub</a><br />
-        not tom@mojombo.com
+        John Clements<br />
+        PLT Programmer<br />
+        aoeugranitemon@brinckerhoff.org
       </p>
     </div>
     <div class="contact">
       <p>
+        what<br />
+        goes<br />
+        here?<br />
        </p>
     </div>
-    <div class="rss">
+    <!--<div class="rss">
       <a href="http://feeds.feedburner.com/tom-preston-werner">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
-    </div>
+    </div> -->
   </div>
 </div>
 
