andy's description of 2005, attempted photo link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,16 +36,16 @@ http://github.com/mojombo/jekyll would be appreciated, but is not required.
   <div class="footer">
     <div class="contact">
       <p>
+        Pages feature text by:<br />
         John Clements<br />
-        PLT Programmer<br />
-        aoeugranitemon@brinckerhoff.org
+        Andy Wanning<br />
+        Ben Walker<br />
+        Justin Pollard<br />
+        ... and others.
       </p>
     </div>
     <div class="contact">
       <p>
-        what<br />
-        goes<br />
-        here?<br />
        </p>
     </div>
     <!--<div class="rss">
