working on getting flickr badges for each year

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@ http://github.com/mojombo/jekyll would be appreciated, but is not required.
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/Granite-Mon-Website/css/screen.css" type="text/css" media="screen, projection" />
 
+   <!-- Flickr CSS -->
+   <link rel="stylesheet" href="/Granite-Mon-Website/css/flickr.css" type="text/css" media="screen, projection" />
+   
+
    <!-- Typekit -->
    <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
